Fix navbar links style in dark mode

--- a/docusaurus/src/scss/navbar.scss
+++ b/docusaurus/src/scss/navbar.scss
@@ -409,8 +409,8 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
    * since we can't rely on --active classes
    * since our nav is fully custom
    */
-  html[class*="docs-doc-id-dev-docs"],
-  html[class*="docs-doc-id-user-docs"] {
+  html[class*="docs-doc-id-cms"],
+  html[class*="docs-doc-id-cloud"] {
     .navbar .custom-mobile-navbar__item:has(.mobile-navbar__cms-link) {
       background-color: var(--strapi-neutral-100);
 
@@ -458,11 +458,30 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
     border-bottom-color: var(--strapi-neutral-150);
   }
 
-  .navbar__link:not(.navbar__link--active) {
+  .navbar__link {
     color: var(--strapi-neutral-400);
 
-    &:hover {
-      color: var(--strapi-primary-600);
+    &:not(.navbar__link--active):hover {
+      color: var(--strapi-neutral-700) !important;
+      background-color: var(--strapi-neutral-0) !important;
+    
+      i::before {
+        color: var(--strapi-neutral-700);
+      }
+    }
+  }
+
+  .navbar__link--active[href^="/cms/"] {
+    background-color: var(--strapi-neutral-0);
+    color: var(--strapi-primary-600);
+  }
+
+  .navbar__link--active[href^="/cloud/"] {
+    background-color: var(--strapi-neutral-0);
+    color: var(--strapi-secondary-500);
+
+    i::before {
+      color: var(--strapi-secondary-500);
     }
   }
 
